# track-and-trace

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
track_and_trace/: .dockerignore  Dockerfile  conftest.py  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt  shipment_sample.csv
track_and_trace/config/: celery.py  settings.py  urls.py
track_and_trace/core/: admin.py  managers.py  models.py
track_and_trace/core/migrations/: 0001_initial.py
track_and_trace/tracking/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py  weather_service.py
track_and_trace/tracking/management/commands/: seed_shipments.py
track_and_trace/tracking/tests/: test_api.py  test_models.py
track_and_track/: .dockerignore  env_sample  pyproject.toml  requirements.txt
track_and_track/config/: celery.py  settings.py  urls.py
track_and_track/core/: admin.py  managers.py
track_and_track/tracking/: models.py  tasks.py  urls.py  weather_service.py
track_and_track/tracking/management/commands/: seed_shipments.py
track_and_track/tracking/migrations/: 0001_initial.py
